added workflow log to file types, ran on latest test batches

--- a/globusgalaxyops/notebooks/globusResultCompile.ipynb
+++ b/globusgalaxyops/notebooks/globusResultCompile.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ae3cf5ab5475144fad8185ee0594099016b85fdbd36971076ede8337789a3e8d"
+  "signature": "sha256:03bf4983042ac9ec76e3443a476ef7b3daa1e93b9e6998d831ba6e8e1f99932a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,7 +19,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -82,7 +82,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -113,14 +113,14 @@
       "            self.get_outputs()\n",
       "            \n",
       "        for lib in self.od:\n",
-      "            print lib\n",
+      "            print \">>> Compiling outputs for %s\\n\" % lib\n",
       "            sc = SampleCurator(lib, self.od[lib])\n",
       "            sc.organize_files(self.dir)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -146,7 +146,8 @@
       "    def get_result_source(self, output):\n",
       "        if not re.search('fastq$', output):\n",
       "            result_sources = ['picard_align', 'picard_markdups', 'picard_rnaseq', \n",
-      "                              'htseq', 'trinity', 'tophat', 'tophat_stats', 'fastqc']\n",
+      "                              'htseq', 'trinity', 'tophat', 'tophat_stats', 'fastqc', \n",
+      "                              'workflow_log']\n",
       "            result_source = [ rs for rs in result_sources \\\n",
       "                              if re.search(rs.lower(), output) ][0]\n",
       "        else:\n",
@@ -187,7 +188,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -230,17 +231,19 @@
       "                            'picard_markdups_metrics_html': 'MarkDups_Dupes_Marked_html.html',\n",
       "                            'trinity_fasta': 'Trinity.fasta',\n",
       "                            'tophat_stats_metrics_txt': self.lib + 'ths.txt',\n",
-      "                            'picard_rnaseq_metrics_text': 'RNA_Seq_Metrics_html.html',\n",
+      "                            'picard_rnaseq_metrics_html': 'RNA_Seq_Metrics_html.html',\n",
       "                            'htseq_counts_txt': self.lib + '_count.txt',\n",
       "                            'tophat_alignments_bam': self.lib + '.bam',\n",
-      "                            'htseq_metrics_txt': self.lib + 'mm.txt'}\n",
+      "                            'htseq_metrics_txt': self.lib + 'mm.txt',\n",
+      "                            'workflow_log_txt': self.lib + '_workflow_log.txt'}\n",
       "        \n",
       "        type_subdir_dict = {'qc': 'QC',\n",
       "                            'metrics': 'metrics',\n",
       "                            'counts': 'counts',\n",
       "                            'alignments': 'alignments',\n",
       "                            'trimmed': 'TrimmedFastqs',\n",
-      "                            'trinity': 'Trinity'}\n",
+      "                            'trinity': 'Trinity',\n",
+      "                            'log': 'logs'}\n",
       "        \n",
       "        dirs_to_bundle = []\n",
       "        for o in source_output_dict:\n",
@@ -254,12 +257,15 @@
       "                if len(self.subdir) and not self.rs == 'trinity':\n",
       "                    dirs_to_bundle.append(out_dir)\n",
       "                \n",
-      "                src_file = os.path.join(self.dir, type_subdir_dict[rt], os.path.basename(rf))\n",
-      "                if not os.path.isfile(src_file):\n",
-      "                    print \"File %s not found\" % src_file\n",
+      "                src_file = os.path.join(self.dir, rt, os.path.basename(rf))\n",
+      "                target_file = os.path.join(out_dir, result_file_dict[o])\n",
+      "                if os.path.exists(target_file):\n",
+      "                    print \"Target file %s already exists\" % target_file\n",
+      "                elif not os.path.exists(src_file):\n",
+      "                    print \"Source file %s not found\" % src_file\n",
       "                else:\n",
-      "                    shutil.copy(src_file,\n",
-      "                                os.path.join(out_dir, result_file_dict[o]))\n",
+      "                    print \"Copying %s to %s\" % (src_file, target_file)\n",
+      "                    shutil.copy(src_file, target_file)\n",
       "        self.bundle = list(set(dirs_to_bundle))\n",
       "                            \n",
       "    def bundle_files(self):\n",
@@ -274,7 +280,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -282,13 +288,13 @@
      "input": [
       "# processed_dir = \"/Users/jaeddy/Dropbox/data/projects/briSeqPipeline/GLOBUS_TESTING/Project_P43-12Processed_151013/\"\n",
       "# processed_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151013/\"\n",
-      "processed_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P109-1Processed_151001/\"\n",
+      "processed_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/\"\n",
       "processed_dir = os.path.abspath(processed_dir)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -304,8 +310,10 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "lib6606_C6VG0ANXX\n",
-        "lib6610_C6VG0ANXX"
+        ">>> Compiling outputs for lib6835_C6VG0ANXX\n",
+        "\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/qc/lib6835_C6VG0ANXX_fastqc_qc.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/QC/lib6835_C6VG0ANXX/qcR1/fastqc_data.txt\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/qc/lib6835_C6VG0ANXX_fastqc_qc.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/QC/lib6835_C6VG0ANXX/qcR1/fastqc_report.html"
        ]
       },
       {
@@ -313,7 +321,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6617_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6835_C6VG0ANXX_picard_markdups_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6835_C6VG0ANXXMarkDups/MarkDups_Dupes_Marked_html.html"
        ]
       },
       {
@@ -321,7 +329,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6616_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6835_C6VG0ANXX_picard_align_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6835_C6VG0ANXX_qc/Picard_Alignment_Summary_Metrics_html.html\n",
+        "Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6835_C6VG0ANXXmm.txt already exists"
        ]
       },
       {
@@ -329,7 +338,11 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6612_C6VG0ANXX"
+        "Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/counts/lib6835_C6VG0ANXX_count.txt already exists\n",
+        "Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/logs/lib6835_C6VG0ANXX_workflow_log.txt already exists\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6835_C6VG0ANXX_picard_rnaseq_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6835_C6VG0ANXX_al/RNA_Seq_Metrics_html.html\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/alignments/lib6835_C6VG0ANXX_tophat_alignments.bam to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/alignments/lib6835_C6VG0ANXX.bam\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6835_C6VG0ANXX_tophat_stats_metrics.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6835_C6VG0ANXXths.txt"
        ]
       },
       {
@@ -337,7 +350,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6619_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/trinity/lib6835_C6VG0ANXX_trinity.fasta to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/Trinity/lib6835_C6VG0ANXX/Trinity.fasta\n",
+        ">>> Compiling outputs for lib6840_C6VG0ANXX\n"
        ]
       },
       {
@@ -345,7 +359,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6618_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/qc/lib6840_C6VG0ANXX_fastqc_qc.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/QC/lib6840_C6VG0ANXX/qcR1/fastqc_data.txt\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/qc/lib6840_C6VG0ANXX_fastqc_qc.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/QC/lib6840_C6VG0ANXX/qcR1/fastqc_report.html"
        ]
       },
       {
@@ -353,7 +368,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6608_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6840_C6VG0ANXX_picard_markdups_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6840_C6VG0ANXXMarkDups/MarkDups_Dupes_Marked_html.html"
        ]
       },
       {
@@ -361,7 +376,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6609_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6840_C6VG0ANXX_picard_align_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6840_C6VG0ANXX_qc/Picard_Alignment_Summary_Metrics_html.html\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6840_C6VG0ANXX_htseq_metrics.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6840_C6VG0ANXXmm.txt"
        ]
       },
       {
@@ -369,7 +385,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6605_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/counts/lib6840_C6VG0ANXX_htseq_counts.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/counts/lib6840_C6VG0ANXX_count.txt\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/log/lib6840_C6VG0ANXX_workflow_log.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/logs/lib6840_C6VG0ANXX_workflow_log.txt"
        ]
       },
       {
@@ -377,7 +394,9 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6611_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6840_C6VG0ANXX_picard_rnaseq_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6840_C6VG0ANXX_al/RNA_Seq_Metrics_html.html\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/alignments/lib6840_C6VG0ANXX_tophat_alignments.bam to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/alignments/lib6840_C6VG0ANXX.bam\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6840_C6VG0ANXX_tophat_stats_metrics.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6840_C6VG0ANXXths.txt"
        ]
       },
       {
@@ -385,7 +404,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6607_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/trinity/lib6840_C6VG0ANXX_trinity.fasta to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/Trinity/lib6840_C6VG0ANXX/Trinity.fasta\n",
+        ">>> Compiling outputs for lib6841_C6VG0ANXX\n"
        ]
       },
       {
@@ -393,7 +413,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6620_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/qc/lib6841_C6VG0ANXX_fastqc_qc.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/QC/lib6841_C6VG0ANXX/qcR1/fastqc_data.txt\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/qc/lib6841_C6VG0ANXX_fastqc_qc.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/QC/lib6841_C6VG0ANXX/qcR1/fastqc_report.html"
        ]
       },
       {
@@ -401,7 +422,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6621_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6841_C6VG0ANXX_picard_markdups_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6841_C6VG0ANXXMarkDups/MarkDups_Dupes_Marked_html.html"
        ]
       },
       {
@@ -409,7 +430,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6613_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6841_C6VG0ANXX_picard_align_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6841_C6VG0ANXX_qc/Picard_Alignment_Summary_Metrics_html.html\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6841_C6VG0ANXX_htseq_metrics.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6841_C6VG0ANXXmm.txt"
        ]
       },
       {
@@ -417,7 +439,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6624_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/counts/lib6841_C6VG0ANXX_htseq_counts.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/counts/lib6841_C6VG0ANXX_count.txt\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/log/lib6841_C6VG0ANXX_workflow_log.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/logs/lib6841_C6VG0ANXX_workflow_log.txt"
        ]
       },
       {
@@ -425,50 +448,71 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6625_C6VG0ANXX"
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/metrics/lib6841_C6VG0ANXX_picard_rnaseq_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/metrics/lib6841_C6VG0ANXX_al/RNA_Seq_Metrics_html.html\n",
+        "Copying /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/alignments/lib6841_C6VG0ANXX_tophat_alignments.bam to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218_formatted/alignments/lib6841_C6VG0ANXX.bam"
        ]
-      },
+      }
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "os.stat('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151218/QC/lib6835_C6VG0ANXX_fastqc_qc.txt')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
        "text": [
-        "\n",
-        "lib6622_C6VG0ANXX"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "lib6623_C6VG0ANXX"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "lib6615_C6VG0ANXX"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "lib6614_C6VG0ANXX"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
+        "posix.stat_result(st_mode=33216, st_ino=306189386, st_dev=771751941, st_nlink=1, st_uid=505, st_gid=20, st_size=168697, st_atime=1450458947, st_mtime=1450458947, st_ctime=1450462114)"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "os.path.abspath('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151218/QC/lib6835_C6VG0ANXX_fastqc_qc.txt')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 41,
+       "text": [
+        "'/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151218/QC/lib6835_C6VG0ANXX_fastqc_qc.txt'"
+       ]
+      }
+     ],
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "[ f for f in os.listdir('/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151218/QC/') if 'lib6835' in f ]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 43,
+       "text": [
+        "['lib6835_C6VG0ANXX_fastqc_qc.txt', 'lib6835_C6VG0ANXX_fastqc_qc.html']"
+       ]
+      }
+     ],
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
