cleaned up nbs a bit

--- a/globusgalaxyops/notebooks/compareToLocal.ipynb
+++ b/globusgalaxyops/notebooks/compareToLocal.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d3616194cb396cd9b1a4b7e2211404504165cd4f65152499fb532c6960ccb979"
+  "signature": "sha256:e3188bac29e37d93cc9afff82a42fe474e129a1d8fbeafa19bf73cda8868a21a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -341,7 +341,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "globus_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151013_formatted/\"\n",
+      "globus_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151013/\"\n",
       "local_dir = \"/Volumes/genomics/Illumina/GLOBUS_TESTING_150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151021/\"\n",
       "\n",
       "# globus_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P109-1Processed_151001_formatted/\"\n",
@@ -350,7 +350,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -382,13 +382,13 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "collect_project_info(local_dir, \"../data\", \"local\")\n",
-      "# collect_project_info(globus_dir, \"../data\", \"globus\")"
+      "# collect_project_info(local_dir, \"../data\", \"local\")\n",
+      "collect_project_info(globus_dir, \"../data\", \"globus\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
