cleaned up check outputs nb, converted to script

--- a/globusgalaxyops/notebooks/check_globus_outputs.ipynb
+++ b/globusgalaxyops/notebooks/check_globus_outputs.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f4205cfeee21ad3ba12158613fa00e9d7fa52be902b4206e202270b4c83f4235"
+  "signature": "sha256:d2cfb43a4d8633cbf31bc4d5e24be3df8bb808a793e22f8e88bad84a0a0867f7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -163,15 +163,15 @@
       "missing_all = []\n",
       "empty_all = []\n",
       "\n",
-      "project_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151217/\"\n",
-      "missing,empty = check_outputs(project_dir)\n",
-      "missing_all += missing\n",
-      "empty_all += empty\n",
+      "# project_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151217/\"\n",
+      "# missing,empty = check_outputs(project_dir)\n",
+      "# missing_all += missing\n",
+      "# empty_all += empty\n",
       "\n",
-      "project_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151218/\"\n",
-      "missing,empty = check_outputs(project_dir)\n",
-      "missing_all += missing\n",
-      "empty_all += empty\n",
+      "# project_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151218/\"\n",
+      "# missing,empty = check_outputs(project_dir)\n",
+      "# missing_all += missing\n",
+      "# empty_all += empty\n",
       "\n",
       "project_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P109-1Processed_151218/\"\n",
       "missing,empty = check_outputs(project_dir)\n",
@@ -203,7 +203,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
