more playing around with mongo & tg3

--- a/genlims/notebooks/flowcell_info_insertion.ipynb
+++ b/genlims/notebooks/flowcell_info_insertion.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d80dc0d47ea4e43d765eb7c6f20b51cbfec1bfc14221b89e7de4827d16716441"
+  "signature": "sha256:c28c22d33d167cae47454fc0b43ee976c5236ae9d768fa78837a2b1263e39598"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,12 +15,13 @@
       "import os, re, sys\n",
       "from pymongo import MongoClient\n",
       "from pprint import pprint\n",
-      "import datetime"
+      "import datetime\n",
+      "import json"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -128,7 +129,7 @@
       "        lib_dict = {}\n",
       "        fc_dict = {}\n",
       "        for l in lib_list_lines[1:]:\n",
-      "            lib_id,fc_str,proj_id,subproj_id,file_path = parse_lib_list_entry(l)\n",
+      "            lib_id,fc_str,proj_id,subproj_id,file_dir = parse_lib_list_entry(l)\n",
       "            fc_date,instr,run_id,fc_id = parse_fc_str(fc_str)\n",
       "            raw_file_list = list_lib_raw_files(file_dir)\n",
       "\n",
@@ -141,10 +142,10 @@
       "                     'lanes': [ {'lane_id': l,\n",
       "                                 'libraries': []} for l in range(1, 9) ]}\n",
       "                    \n",
-      "            lib_lanes = [ f.get('lane_id') for f in raw_files ]\n",
+      "            lib_lanes = [ f.get('lane_id') for f in raw_file_list ]\n",
       "            [ fc_dict[fc_id]['lanes'][idx]['libraries'].append({'lib_id': lib_id}) \\\n",
       "              for idx,l in enumerate(fc_dict[fc_id]['lanes']) \\\n",
-      "              if l.get('lane_id') in lib_lanes ]\n",
+      "              if l.get('lane_id') in lib_lanes and len(fc_dict[fc_id]['lanes'][idx]['libraries']) < 2 ]\n",
       "                \n",
       "            if lib_id not in lib_dict:\n",
       "                lib_dict[lib_id] = \\\n",
@@ -162,19 +163,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 224
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "lib_list_file = \"../data/lib_list_151216_P85.txt\"\n",
+      "lib_list_file = \"../data/lib_list_151216.txt\"\n",
       "fc_dict,lib_dict = read_lib_list(lib_list_file)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 225
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -191,23 +192,53 @@
        "text": [
         "{'C81A1ANXX': {'date': '2015-12-16',\n",
         "               'instrument_id': 'D00565',\n",
-        "               'lanes': [{'lane_id': 1, 'libraries': []},\n",
-        "                         {'lane_id': 2, 'libraries': []},\n",
-        "                         {'lane_id': 3, 'libraries': []},\n",
-        "                         {'lane_id': 4, 'libraries': []},\n",
-        "                         {'lane_id': 5, 'libraries': []},\n",
-        "                         {'lane_id': 6, 'libraries': []},\n",
-        "                         {'lane_id': 7,\n",
-        "                          'libraries': [{'lib_id': 'lib10181'},\n",
-        "                                        {'lib_id': 'lib10183'},\n",
-        "                                        {'lib_id': 'lib10180'}]},\n",
-        "                         {'lane_id': 8, 'libraries': []}],\n",
+        "               'lanes': [{'lane_id': 1,\n",
+        "                          'libraries': [{'lib_id': 'lib9974'},\n",
+        "                                        {'lib_id': 'lib10000'},\n",
+        "                                        {'lib_id': 'lib9977'},\n",
+        "                                        {'lib_id': 'lib9999'},\n",
+        "                                        {'lib_id': 'lib9980'},\n",
+        "                                        {'lib_id': 'lib9994'},\n",
+        "                                        {'lib_id': 'lib9979'},\n",
+        "                                        {'lib_id': 'lib10007'},\n",
+        "                                        {'lib_id': 'lib9983'},\n",
+        "                                        {'lib_id': 'lib9990'},\n",
+        "                                        {'lib_id': 'lib10005'},\n",
+        "                                        {'lib_id': 'lib9984'},\n",
+        "                                        {'lib_id': 'lib10003'},\n",
+        "                                        {'lib_id': 'lib9975'},\n",
+        "                                        {'lib_id': 'lib9988'},\n",
+        "                                        {'lib_id': 'lib10012'},\n",
+        "                                        {'lib_id': 'lib10008'},\n",
+        "                                        {'lib_id': 'lib10010'},\n",
+        "                                        {'lib_id': 'lib10002'},\n",
+        "                                        {'lib_id': 'lib10009'},\n",
+        "                                        {'lib_id': 'lib9997'},\n",
+        "                                        {'lib_id': 'lib9992'},\n",
+        "                                        {'lib_id': 'lib9976'},\n",
+        "                                        {'lib_id': 'lib10001'},\n",
+        "                                        {'lib_id': 'lib9985'},\n",
+        "                                        {'lib_id': 'lib9987'},\n",
+        "                                        {'lib_id': 'lib9993'},\n",
+        "                                        {'lib_id': 'lib9978'},\n",
+        "                                        {'lib_id': 'lib10006'},\n",
+        "                                        {'lib_id': 'lib9995'},\n",
+        "                                        {'lib_id': 'lib9989'},\n",
+        "                                        {'lib_id': 'lib9981'},\n",
+        "                                        {'lib_id': 'lib9991'},\n",
+        "                                        {'lib_id': 'lib10004'},\n",
+        "                                        {'lib_id': 'lib9998'},\n",
+        "                                        {'lib_id': 'lib10013'},\n",
+        "                                        {'lib_id': 'lib9986'},\n",
+        "                                        {'lib_id': 'lib9982'},\n",
+        "                                        {'lib_id': 'lib9996'},\n",
+        "                                        {'lib_id': 'lib10011'}]}],\n",
         "               'run_id': 100,\n",
         "               'type': 'flowcell'}}\n"
        ]
       }
      ],
-     "prompt_number": 226
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -291,59 +322,202 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 175
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "lib_dict_to_db(lib_dict)[0]"
+      "print json.dumps(lib_dict_to_db(lib_dict)[1], indent=4, sort_keys=True)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 184,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "{'_id': 'lib10204',\n",
-        " 'assays': [{'assayId': 'C81A1ANXX',\n",
-        "   'rawData': [{'compression': 'gz',\n",
-        "     'laneId': 7,\n",
-        "     'path': '/genomics/Illumina/151216_D00565_0100_AC81A1ANXX/Unaligned/P85-9-27316300/lib10180-31653713/CD4plusCCR5plusGFPplusBlood_S246_L007_R1_001.fastq.gz',\n",
-        "     'readId': 1,\n",
-        "     'type': 'fastq'}]}],\n",
-        " 'projectId': 43,\n",
-        " 'subprojectId': 36}"
+        "{\n",
+        "    \"_id\": \"lib10205\", \n",
+        "    \"assays\": [\n",
+        "        {\n",
+        "            \"assayId\": \"C81A1ANXX\", \n",
+        "            \"rawData\": [\n",
+        "                {\n",
+        "                    \"compression\": \"gz\", \n",
+        "                    \"laneId\": 7, \n",
+        "                    \"path\": \"/genomics/Illumina/151216_D00565_0100_AC81A1ANXX/Unaligned/P43-36-27317307/lib10205-31660697/PA342-17_S271_L007_R1_001.fastq.gz\", \n",
+        "                    \"readId\": 1, \n",
+        "                    \"type\": \"fastq\"\n",
+        "                }\n",
+        "            ]\n",
+        "        }\n",
+        "    ], \n",
+        "    \"projectId\": 43, \n",
+        "    \"subprojectId\": 36\n",
+        "}\n"
        ]
       }
      ],
-     "prompt_number": 184
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fc_dict_to_db(fc_dict)[0]"
+      "lib10000 = [lib for lib in lib_dict_to_db(lib_dict) if lib['_id'] == 'lib10000']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 36
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print json.dumps(lib10000, indent=4, sort_keys=True)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 185,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "{'_id': 'C81A1ANXX',\n",
-        " 'date': '2015-12-16',\n",
-        " 'instrumentId': 'D00565',\n",
-        " 'runId': 100,\n",
-        " 'type': 'flowcell'}"
+        "[\n",
+        "    {\n",
+        "        \"_id\": \"lib10000\", \n",
+        "        \"assays\": [\n",
+        "            {\n",
+        "                \"assayId\": \"C81A1ANXX\", \n",
+        "                \"rawData\": [\n",
+        "                    {\n",
+        "                        \"compression\": \"gz\", \n",
+        "                        \"laneId\": 1, \n",
+        "                        \"path\": \"/genomics/Illumina/151216_D00565_0100_AC81A1ANXX/Unaligned/P43-29-27330309/lib10000-31653654/1D-HC29-C04_S27_L001_R1_001.fastq.gz\", \n",
+        "                        \"readId\": 1, \n",
+        "                        \"type\": \"fastq\"\n",
+        "                    }\n",
+        "                ]\n",
+        "            }\n",
+        "        ], \n",
+        "        \"projectId\": 43, \n",
+        "        \"subprojectId\": 29\n",
+        "    }\n",
+        "]\n"
        ]
       }
      ],
-     "prompt_number": 185
+     "prompt_number": 37
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print json.dumps(fc_dict_to_db(fc_dict)[0], indent=4, sort_keys=True)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{\n",
+        "    \"_id\": \"C81A1ANXX\", \n",
+        "    \"date\": \"2015-12-16\", \n",
+        "    \"instrumentId\": \"D00565\", \n",
+        "    \"lanes\": [\n",
+        "        {\n",
+        "            \"laneId\": 1, \n",
+        "            \"libraries\": [\n",
+        "                {\n",
+        "                    \"libId\": \"lib9974\"\n",
+        "                }, \n",
+        "                {\n",
+        "                    \"libId\": \"lib10000\"\n",
+        "                }\n",
+        "            ]\n",
+        "        }, \n",
+        "        {\n",
+        "            \"laneId\": 2, \n",
+        "            \"libraries\": [\n",
+        "                {\n",
+        "                    \"libId\": \"lib10032\"\n",
+        "                }, \n",
+        "                {\n",
+        "                    \"libId\": \"lib10039\"\n",
+        "                }\n",
+        "            ]\n",
+        "        }, \n",
+        "        {\n",
+        "            \"laneId\": 3, \n",
+        "            \"libraries\": [\n",
+        "                {\n",
+        "                    \"libId\": \"lib10091\"\n",
+        "                }, \n",
+        "                {\n",
+        "                    \"libId\": \"lib10086\"\n",
+        "                }\n",
+        "            ]\n",
+        "        }, \n",
+        "        {\n",
+        "            \"laneId\": 4, \n",
+        "            \"libraries\": [\n",
+        "                {\n",
+        "                    \"libId\": \"lib10121\"\n",
+        "                }, \n",
+        "                {\n",
+        "                    \"libId\": \"lib10104\"\n",
+        "                }\n",
+        "            ]\n",
+        "        }, \n",
+        "        {\n",
+        "            \"laneId\": 5, \n",
+        "            \"libraries\": [\n",
+        "                {\n",
+        "                    \"libId\": \"lib10240\"\n",
+        "                }, \n",
+        "                {\n",
+        "                    \"libId\": \"lib10226\"\n",
+        "                }\n",
+        "            ]\n",
+        "        }, \n",
+        "        {\n",
+        "            \"laneId\": 6, \n",
+        "            \"libraries\": [\n",
+        "                {\n",
+        "                    \"libId\": \"lib10129\"\n",
+        "                }, \n",
+        "                {\n",
+        "                    \"libId\": \"lib10128\"\n",
+        "                }\n",
+        "            ]\n",
+        "        }, \n",
+        "        {\n",
+        "            \"laneId\": 7, \n",
+        "            \"libraries\": [\n",
+        "                {\n",
+        "                    \"libId\": \"lib10174\"\n",
+        "                }, \n",
+        "                {\n",
+        "                    \"libId\": \"lib10171\"\n",
+        "                }\n",
+        "            ]\n",
+        "        }, \n",
+        "        {\n",
+        "            \"laneId\": 8, \n",
+        "            \"libraries\": []\n",
+        "        }\n",
+        "    ], \n",
+        "    \"runId\": 100, \n",
+        "    \"type\": \"flowcell\"\n",
+        "}\n"
+       ]
+      }
+     ],
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
